# GDS_Amadeus

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
migrations/: env.py
migrations/versions/: 2024_12_09_1012-4e47b856a842_init.py
src/: 1.py  logger.py  main.py  settings.py
src/db/: config.py
src/db/crud/: base_crud.py  gds_report_crud.py
src/db/enums/: __init__.py  base.py  gds.py  receivers.py
src/db/models/: base.py  gds_reports.py
src/db/schemas/: gds_reports_schema.py
src/gds/: __init__.py
src/gds/amadeus/: amadeus_api.py  amadeus_mixin.py
src/gds/base/: base_api.py  mixins.py
src/helpers/: files_helper.py  midnight_crossing_helper.py  targz_helper.py  ulid_helper.py
src/schemas/: common_schema.py
tests/: conftest.py
tests/unit/: conftest.py  test_files_helper.py  test_midnight_crossing.py  test_targz_helper.py  test_ulid_helper.py
