[tool.poetry]
name = "gds-amadeus"
version = "0.1.0"
description = ""
authors = ["Andrey Tikhonov <andrey.tikhonov@traxess.ch>"]
readme = "README.md"
package-mode = false 

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
lxml = "^5.3.0"
SQLAlchemy = "^2.0.36"
PyMySQL = "^1.1.1"
alembic = "^1.14.0"
python-ulid = "^3.0.0"
pydantic = "^2.9.2"
pydantic-settings = "^2.6.1"
sentry-sdk = "^2.18.0"
slack-logger = "^0.3.1"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"
mypy = "^1.10.1"
pylint = "^3.2.5"



[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
pytest-mock = "^3.14.0"
pytest-env = "^1.1.5"
pytest-xdist = "^3.6.1"
pytest-cov = "^6.0.0"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
